# Weekend-Pilot

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  题目描述.txt
alembic/: env.py
docs/: COMPETITION_DESIGN_DOCUMENT.md  COMPETITION_SUBMISSION_DESIGN.md  MEMORY_GOVERNANCE_RUNBOOK.md  NEW_WORKFLOW_PROMPT.md  NEXT_PHASE_ROADMAP.md  PROJECT_ASSESSMENT_REPORT.md  PROJECT_BLUEPRINT.md  RICHER_WEB_UI_V1_CHECKLIST.md  TASK_INFO.md  TECHNICAL_REPORT.md  V1_5_REVIEW_EVIDENCE.md  WEB_DEMO_README.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vite.internal.config.ts
scripts/: demo_amap_preview.py  demo_preflight.py  generate_benchmark_case_matrix.py  run_benchmark_coverage_gate.py  run_benchmark_release_gate.py  run_benchmark_safe_stop_gate.py  run_benchmark_stability_passk.py  run_benchmark_v2_integrity_gate.py  run_formal_verification.py  run_recovery_replay_review.py  show_submission_evidence.py  verify_review_evidence.py
tests/: test_agents.py  test_alembic_config.py  test_amap_mapper.py  test_amap_provider.py  test_benchmark_case_matrix_generation.py  test_benchmark_coverage_gate.py  test_benchmark_harness.py  test_benchmark_internal_summary.py  test_benchmark_release_gate.py  test_benchmark_replay.py  test_benchmark_safe_stop_gate.py  test_benchmark_stability_harness.py  test_benchmark_suites.py  test_benchmark_v2_integrity_gate.py  test_benchmark_v2_taxonomy.py  test_candidate_enrichment.py  test_db_metadata.py  test_demo_action_manifest.py  test_demo_api.py  (+40 more)
(+519 files in other folders)
