[project]
name = "weekend-pilot"
version = "0.1.0"
description = "Benchmark-driven local-life weekend planning and execution system."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
  "pydantic-settings>=2.2,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "psycopg[binary]>=3.1,<4.0",
  "redis>=5.0,<6.0",
  "httpx>=0.27,<1.0",
  "langsmith>=0.1.133,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.setuptools.packages.find]
include = ["backend*"]
exclude = ["alembic*", "docs*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
